[package]
name = "weixin"
version = "0.1.0"
authors = ["lpgo <whereisgirl@126.com>"]
build="build.rs"

[build-dependencies]
serde_codegen = "0.6.14"
syntex = "0.29.0"

[dependencies.jsonway]
git = "https://github.com/rustless/jsonway"

[dependencies]
quickersort = "*"
sha1="*"
iron="*"
urlencoded="*"
mount="*"
staticfile="*"
mongodb="*"
bson="0.1.5"
router="*"
plugin="*"
serde="0.6.15"
serde_xml="*"
serde_json="0.6.1"
hyper="0.7.2"
openssl="*"
rustc-serialize = "*"
uuid="*"
cookie="*"
handlebars-iron="0.11.1"
env_logger="*"
log="*"
chrono="*"
md5="*"
toml="*"
lazy_static="*"
url="*"

[features]
default=["serde_type"]
serde_type = ["handlebars-iron/serde_type"]


