[package]
name = "weixin"
version = "0.1.0"
authors = ["lpgo <whereisgirl@126.com>"]
build="build.rs"

[build-dependencies]
serde_codegen = "0.7.5"
syntex = "0.32.0"

[dependencies.jsonway]
git = "https://github.com/rustless/jsonway"

[dependencies]
quickersort = "2.0.1"
sha1="0.1.1"
iron="0.3.0"
urlencoded="0.3.0"
mount="0.1.0"
staticfile="0.2.0"
mongodb="0.1.4"
bson="0.2.1"
router="0.1.1"
plugin="0.2.6"
serde="0.7.5"
serde_xml="0.7.0"
serde_json="0.7.0"
hyper="0.8.1"
openssl="0.7.11"
rustc-serialize = "0.3.19"
uuid="0.2.2"
handlebars-iron="0.15.1"
env_logger="0.3.3"
log="0.3.6"
chrono="0.2.22"
md5="0.1.1"
toml="0.1.29"
lazy_static="0.2.1"
url="1.1.0"
rand="0.3.14"
cookie="0.2.4"

[features]
default=["serde_type"]
serde_type = ["handlebars-iron/serde_type"]


